--- a/Instagram.html
+++ b/Instagram.html
@@ -6,6 +6,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="estilos/estilo-redes.css">
 
+    <style>
+        body {
+            background-color: black;
+        }
+    </style>
+
 </head>
 <body>
     <img src="pacote-d013/imagens/tela-instagram.jpg" alt="">
