--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         </section>
 
         <section id="redesocial">
-           <a href="Home.html" target="tela"> <img src="pacote-d013/imagens/logo-home.jpg" alt=""></a><br>
-           <a href="github.html" target="tela"><img src="pacote-d013/imagens/logo-github.jpg" alt=""></a><br>
-           <a href="facebook.html" target="tela"><img src="pacote-d013/imagens/logo-facebook.jpg" alt=""></a><br>
-           <a href="Instagram.html" target="tela"><img src="pacote-d013/imagens/logo-instagram.jpg" alt=""></a><br>
-           <a href="twiter.html" target="tela"><img src="pacote-d013/imagens/logo-twitter.jpg" alt=""></a><br>
-           <a href="youtube.html" target="tela"><img src="pacote-d013/imagens/logo-youtube.jpg" alt=""></a><br>
+           <a href="Home.html" target="tela"> <img src="pacote-d013/imagens/logo-home.jpg" alt=""></a>
+           <a href="github.html" target="tela"><img src="pacote-d013/imagens/logo-github.jpg" alt=""></a>
+           <a href="facebook.html" target="tela"><img src="pacote-d013/imagens/logo-facebook.jpg" alt=""></a>
+           <a href="Instagram.html" target="tela"><img src="pacote-d013/imagens/logo-instagram.jpg" alt=""></a>
+           <a href="twiter.html" target="tela"><img src="pacote-d013/imagens/logo-twitter.jpg" alt=""></a>
+           <a href="youtube.html" target="tela"><img src="pacote-d013/imagens/logo-youtube.jpg" alt=""></a>
 
         </section>
 
